Modified the label text.

--- a/ASP.NET Core/Pages/Index.cshtml
+++ b/ASP.NET Core/Pages/Index.cshtml
@@ -274,11 +274,11 @@
         //Initialize action items.
         var items = [
             {
-                text: 'Merge Preview',
+                text: 'Preview Results',
                 id: 'preview'
             },
             {
-                text: 'Finish Merge',
+                text: 'Merge & Finish',
                 id: 'Merge'
             }];
         if (drpDownBtn == null || drpDownBtn == undefined) {
